--- a/KVT_V1/index.html
+++ b/KVT_V1/index.html
@@ -14,7 +14,7 @@
   
   <div class="intro-text-wrap">
     <h1 class="intro-text">
-      <a href="" class="typewrite" data-period="2000" data-type='[ "Hi.", "Who", "am", "I ?", "I am", "Crea tive", "I am", "Dri ven", "both Design","and Code", "Fused", "into one.", "I am", "Ken Trinh" ]'>
+      <a class="typewrite" id="typewriter-text" href="#" data-period="2000" data-type='[ "test text" ]'>
         <span class="wrap"></span>
       </a>
     </h1>
@@ -23,7 +23,7 @@
   <div class="master-container col-twelve">
 
     <!------------------------------------------------------------------------------------------>
-    <!---------------------------------------MAIN SECTION--------------------------------------->
+    <!-------------------------------------MAIN SECTION TOP------------------------------------->
     <!------------------------------------------------------------------------------------------>
     <div class="main-content">
 
@@ -40,7 +40,6 @@
       <!------------------------------------------------------------------------------------------>
       <div class="row project-row">
 
-        <!-- <div class="thumbnail-row"> -->
         <div class="col-two">
           <div class="thumbnail-description">
             <p class="thumbnail-title">Thinkful &nbsp; | &nbsp; Quiz App </p>
@@ -78,7 +77,7 @@
               </div>
 
               <div class="overlay">
-                <div class="text">Director Deduction</div>
+                <div class="text">View Live Demo</div>
               </div>
             </a>
           </div>
@@ -132,7 +131,7 @@
               </div>
 
               <div class="overlay">
-                <div class="text">Director Deduction</div>
+                <div class="text">View Live Demo</div>
               </div>
             </a>
           </div>
@@ -186,7 +185,7 @@
               </div>
 
               <div class="overlay">
-                <div class="text">Director Deduction</div>
+                <div class="text">View Live Demo</div>
               </div>
             </a>
           </div>
@@ -212,41 +211,54 @@
       <!------------------------------------------------------------------------------------------>
       <!----------------------------------------ROW 04 END---------------------------------------->
       <!------------------------------------------------------------------------------------------>
-
-
     </div><!--main-content-->
-  
+    <!------------------------------------------------------------------------------------------>
+    <!-------------------------------------MAIN SECTION END------------------------------------->
+    <!------------------------------------------------------------------------------------------>
   </div><!--master-container-->
 
+  <!------------------------------------------------------------------------------------------>
+  <!------------------------------------FOOTER SECTION TOP------------------------------------>
+  <!------------------------------------------------------------------------------------------>
   <footer class="footer-section" role="contentinfo">
-    <div class="row footer-row">
-      <div class="col-twelve">
-        Photo by Markus Spiske on Unsplash
-        <a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@markusspiske?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Markus Spiske"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-1px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M20.8 18.1c0 2.7-2.2 4.8-4.8 4.8s-4.8-2.1-4.8-4.8c0-2.7 2.2-4.8 4.8-4.8 2.7.1 4.8 2.2 4.8 4.8zm11.2-7.4v14.9c0 2.3-1.9 4.3-4.3 4.3h-23.4c-2.4 0-4.3-1.9-4.3-4.3v-15c0-2.3 1.9-4.3 4.3-4.3h3.7l.8-2.3c.4-1.1 1.7-2 2.9-2h8.6c1.2 0 2.5.9 2.9 2l.8 2.4h3.7c2.4 0 4.3 1.9 4.3 4.3zm-8.6 7.5c0-4.1-3.3-7.5-7.5-7.5-4.1 0-7.5 3.4-7.5 7.5s3.3 7.5 7.5 7.5c4.2-.1 7.5-3.4 7.5-7.5z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Markus Spiske</span></a>
+    <div class="row">
+      <div class="col-four about-column footer-column">
+        <ul>
+          <li><a href="#">Stuff Link 1</a></li>
+          <li><a href="#">Stuff Link 2</a></li>
+          <li><a href="#">Stuff Link 3</a></li>
+          <li><a href="#">Stuff Link 4</a></li>
+          <li><a href="#">Stuff Link 5</a></li>
+        </ul>
+      </div>
+
+      <div class="col-four contact-column footer-column">
+        <p>
+          Maecenas ultricies leo vitae feugiat hendrerit. Vestibulum consectetur nisi sit amet est mattis, vitae venenatis lacus mattis. Ut posuere finibus nisi sed viverra. Curabitur eget lectus eu arcu hendrerit fermentum.
+        </p> 
+      </div>
+
+      <div class="col-four media-column footer-column">
+        <ul>
+          <li><a href="#">Stuff Link 1</a></li>
+          <li><a href="#">Stuff Link 2</a></li>
+          <li><a href="#">Stuff Link 3</a></li>
+          <li><a href="#">Stuff Link 4</a></li>
+          <li><a href="#">Stuff Link 5</a></li>
+        </ul>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-four about-column">
-        <p>
-          Maecenas ultricies leo vitae feugiat hendrerit. Vestibulum consectetur nisi sit amet est mattis, vitae venenatis lacus mattis. Ut posuere finibus nisi sed viverra. Curabitur eget lectus eu arcu hendrerit fermentum.
-        </p> 
-      </div>
-
-      <div class="col-four contact-column">
-        <p>
-          Maecenas ultricies leo vitae feugiat hendrerit. Vestibulum consectetur nisi sit amet est mattis, vitae venenatis lacus mattis. Ut posuere finibus nisi sed viverra. Curabitur eget lectus eu arcu hendrerit fermentum.
-        </p> 
-      </div>
-
-      <div class="col-four media-column">
-        <p>
-          Maecenas ultricies leo vitae feugiat hendrerit. Vestibulum consectetur nisi sit amet est mattis, vitae venenatis lacus mattis. Ut posuere finibus nisi sed viverra. Curabitur eget lectus eu arcu hendrerit fermentum.
-        </p> 
+      <div class="col-twelve copyright">
+        <small>&copy; Copyright 2018 Ken Trinh | </small>
+        <a href="https://unsplash.com/photos/FXFz-sW0uwo" target="_blank">Hero Photo by Markus Spiske</a>
       </div>
     </div>
-
   </footer>
+  <!------------------------------------------------------------------------------------------>
+  <!------------------------------------FOOTER SECTION END------------------------------------>
+  <!------------------------------------------------------------------------------------------>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/js/app.js"></script>
